--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://adonath.github.io
 title: One Summer for AstroPy 
-subtitle: A GSoC 2013 blog for AstroPy.
+subtitle: A GSoC 2013 blog for AstroPy
 author: A.Donath
 simple_search: http://google.com/search
 description: 
